; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_lua.c_register_package_fns.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_lua.c_register_package_fns.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fn_entry = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, %struct.fn_entry*)* @register_package_fns to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @register_package_fns(i32* %0, i8* %1, %struct.fn_entry* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.fn_entry*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.fn_entry* %2, %struct.fn_entry** %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = call i32 @push_module_table(i32* %8, i8* %9)
  store i32 0, i32* %7, align 4
  br label %11

11:                                               ; preds = %36, %3
  %12 = load %struct.fn_entry*, %struct.fn_entry** %6, align 8
  %13 = load i32, i32* %7, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds %struct.fn_entry, %struct.fn_entry* %12, i64 %14
  %16 = getelementptr inbounds %struct.fn_entry, %struct.fn_entry* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %39

19:                                               ; preds = %11
  %20 = load i32*, i32** %4, align 8
  %21 = load %struct.fn_entry*, %struct.fn_entry** %6, align 8
  %22 = load i32, i32* %7, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds %struct.fn_entry, %struct.fn_entry* %21, i64 %23
  %25 = getelementptr inbounds %struct.fn_entry, %struct.fn_entry* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 8
  %27 = call i32 @lua_pushcclosure(i32* %20, i32 %26, i32 0)
  %28 = load i32*, i32** %4, align 8
  %29 = load %struct.fn_entry*, %struct.fn_entry** %6, align 8
  %30 = load i32, i32* %7, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds %struct.fn_entry, %struct.fn_entry* %29, i64 %31
  %33 = getelementptr inbounds %struct.fn_entry, %struct.fn_entry* %32, i32 0, i32 0
  %34 = load i64, i64* %33, align 8
  %35 = call i32 @lua_setfield(i32* %28, i32 -2, i64 %34)
  br label %36

36:                                               ; preds = %19
  %37 = load i32, i32* %7, align 4
  %38 = add nsw i32 %37, 1
  store i32 %38, i32* %7, align 4
  br label %11

39:                                               ; preds = %11
  %40 = load i32*, i32** %4, align 8
  %41 = call i32 @lua_pop(i32* %40, i32 1)
  ret void
}

declare dso_local i32 @push_module_table(i32*, i8*) #1

declare dso_local i32 @lua_pushcclosure(i32*, i32, i32) #1

declare dso_local i32 @lua_setfield(i32*, i32, i64) #1

declare dso_local i32 @lua_pop(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
